# MwanaBot

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: __init__.py  config.py  graph.py  main.py  memory.py  models.py  prompts.py  rag.py  tool_runner.py  tools.py
mwanabot.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
scripts/: ingest_documents.py
tests/: test_prompts.py
